Fix accordionSection gaps and increase gaps between images and list of items

--- a/src/Components/Research-page/Consideration/index.module.css
+++ b/src/Components/Research-page/Consideration/index.module.css
@@ -12,7 +12,7 @@
 .mainSection aside,
 .mainSection section {
   display: grid;
-  column-gap: 1rem;
+  column-gap: 2rem;
 }
 
 .mainSection {
@@ -77,6 +77,7 @@
 @media screen and (max-width: 1024px) {
   .titleStyle,
   .hiddenContentStyle,
+  .visibleContentStyle,
   .mainSection section header p,
   .bluePattern p {
     font-size: 1rem;
